--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 rocket = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
+serde_yaml = "0.8.13"
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
