--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ serde_yaml = "0.8.13"
 [dependencies.rocket_contrib]
 version = "0.4.5"
 default-features = false
-features = ["json"]
+features = ["json", "handlebars_templates"]
