--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -14,5 +14,5 @@ version = "0.4.5"
 default-features = false
 features = ["json", "handlebars_templates"]
 
-[dependencies.missions_lib]
-path = "../missions_lib"
+[dependencies.lib]
+path = "../lib"
