--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,25 @@
-[workspace]
-members = ["web", "cli", "lib"]
+[package]
+name = "web"
+version = "0.1.0"
+authors = ["Harry Tucker <harrytuckerubuntu@gmail.com>"]
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+rocket = "0.4.5"
+quicli = "0.4"
+structopt = "0.2"
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.57"
+serde_yaml = "0.8.13"
+
+[dependencies.rocket_contrib]
+version = "0.4.5"
+default-features = false
+features = ["json", "handlebars_templates"]
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
