--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ structopt = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
 serde_yaml = "0.8.13"
+failure = "0.1.8"
+clap = "2.33.3"
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
