Add diesel and sqlite database pool
The application needs to be able to persist team score cards. This
commit adds a new sqlite database to the project and manages the schema
using diesel. The database does nto currently have a schema.

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,6 +1,9 @@
 [global]
 template_dir = "templates/"
 
+[global.databases]
+sqlite = { url = "database.sqlite" }
+
 [development]
 address = "localhost"
 
