--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ rocket-include-static-resources = "0.9.5"
 quicli = "0.4"
 structopt = "0.2"
 
+diesel = { version = "1.4.4", features = ["sqlite"] }
+dotenv = "0.15.0"
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
 serde_yaml = "0.8.13"
@@ -21,7 +24,7 @@ clap = "2.33.3"
 [dependencies.rocket_contrib]
 version = "0.4.5"
 default-features = false
-features = ["json", "handlebars_templates"]
+features = ["json", "handlebars_templates", "diesel_sqlite_pool"]
 
 [lib]
 name = "lib"
